--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.16.0",
-    "vue": "^2.6.14"
+    "axios": "^0.21.1",
+    "core-js": "~3.16.0",
+    "jquery": "^3.6.0",
+    "vue": "~2.6.14",
+    "vuetify": "~2.5.8"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.14"
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
+    "babel-eslint": "~10.1.0",
+    "eslint": "~6.8.0",
+    "eslint-plugin-vue": "~6.2.2",
+    "sass": "~1.32.13",
+    "sass-loader": "~10.2.0",
+    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vue-template-compiler": "~2.6.14",
+    "vuetify-loader": "~1.7.2"
   },
   "eslintConfig": {
     "root": true,
